# devicehub-mask

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  eslint.config.js  index.html  package-lock.json  package.json  tauri.conf.json  vite.config.ts
.cargo/: config.toml
capabilities/: default.json
cmake/: msvc-toolchain.cmake
frontend/: package-lock.json  package.json
scripts/: build-desktop.mjs  check-docs.mjs  generate-update-manifest.sh  package-dmg.sh  prepare-ffmpeg.mjs  prepare-netmuxd.mjs  prepare-windows-device.ps1  verify-windows-package.ps1  verify.mjs
src/: App.tsx  AppProviders.tsx  afcBrowser.test.ts  afcBrowser.ts  appConsole.ts  browserVideo.test.ts  browserVideo.ts  control.test.ts  control.ts  decode.rs  deviceAudio.test.ts  deviceLogs.ts  (+53 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: THIRD_PARTY_NOTICES.txt
src-tauri/src/: app_console.rs  app_documents.rs  app_icons.rs  app_lifecycle.rs  application.rs  audio_output.rs  bluetooth_capture.rs  browser_video.rs  companion_devices.rs  crash_reports.rs  decode.rs  demand.rs  developer_image.rs  developer_mode.rs  device_backup.rs  device_conditions.rs  device_events.rs  device_files.rs  device_logs.rs  diagnostics.rs  heartbeat.rs  hid.rs  home_screen.rs  ipa.rs  lib.rs  location.rs  log_archive.rs  main.rs  mcp.rs  netmuxd.rs  network_capture.rs  performance.rs  protocol.rs  provisioning.rs  running_processes.rs  screen_capture.rs  session.rs  settings.rs  supervisor.rs  sysdiagnose.rs  (+4 more)
(+60 files in other folders)
